[gd_scene load_steps=13 format=3 uid="uid://muqjcw4pvc4o"]

[ext_resource type="Texture2D" uid="uid://b8ho0ihailb35" path="res://Game/1Scene/2Shop_Map/Texture/Shop_Carpenter_Top.png" id="1_3kani"]
[ext_resource type="Script" path="res://Game/1Scene/2Shop_Map/Objects/Shop_Carpenter/Script/shop_carpenter.gd" id="1_qjckw"]
[ext_resource type="Texture2D" uid="uid://cpkpi3518ymt2" path="res://Game/1Scene/2Shop_Map/Texture/Shop_Carpenter_Bottom.png" id="2_xo7tv"]
[ext_resource type="Texture2D" uid="uid://cyq4hxke38xaa" path="res://Game/1Scene/2Shop_Map/Texture/Shop_Carpenter_Bottom_selected.png" id="4_ysb3a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vv2uj"]
atlas = ExtResource("2_xo7tv")
region = Rect2(0, 0, 159, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sywk"]
atlas = ExtResource("4_ysb3a")
region = Rect2(0, 0, 159, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_c1cfo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv2uj")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sywk")
}],
"loop": true,
"name": &"Selected",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3rp1x"]
size = Vector2(219, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5hd4"]
size = Vector2(123, 50.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fjfpq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1npy5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8foj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Shop_Carpenter" type="StaticBody2D"]
script = ExtResource("1_qjckw")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
texture_filter = 1
scale = Vector2(1.609, 1.609)
texture = ExtResource("1_3kani")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.609, 1.609)
sprite_frames = SubResource("SpriteFrames_c1cfo")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4.5, 18.5)
shape = SubResource("RectangleShape2D_3rp1x")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-23.5, 78.75)
shape = SubResource("RectangleShape2D_m5hd4")

[node name="Button" type="Button" parent="."]
offset_left = -37.0
offset_top = 21.0
offset_right = -14.0
offset_bottom = 64.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_fjfpq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1npy5")
theme_override_styles/normal = SubResource("StyleBoxFlat_k8foj")
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
